fix: spacing between slide info and thumb

--- a/css/main.css
+++ b/css/main.css
@@ -467,6 +467,7 @@ label {
         margin-top: 73px;
         position: relative;
         top: -5px;
+        padding-right: 75px;
     }
 
     .jl-portfolio-item-thumb {
